# ftplace-TUI

./: .cursorignore  .gitignore  Cargo.toml  Makefile  README.md
.cursor/rules/: ftplace-project-guide.mdc  todo-features.mdc
patterns/: 42.json  42_lausanne.json  switzerland_flag.json  switzerland_map.json
src/: api_client.rs  app_state.rs  art.rs  event_handler.rs  main.rs  token_storage.rs  ui.rs
src/event_handling/: art_placement.rs  board_management.rs  file_operations.rs  helpers.rs  input_handling.rs  mod.rs  profile_management.rs  queue_management.rs  validation.rs
src/ui/: art_editor.rs  art_management.rs  helpers.rs  mod.rs  popups.rs  render.rs
