[package]
name = "ftplace_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.27.0", features = ["crossterm"] }
crossterm = "0.27.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = { version = "3.6.2", features = ["apple-native"] } 